fix: :bug: Fix transfers/approve using put instead post
